Add ONNX export support for D-FINE

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -31,6 +31,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - ConvBert
 - ConvNext
 - ConvNextV2
+- D-FINE
 - Data2VecAudio
 - Data2VecText
 - Data2VecVision
@@ -97,6 +98,8 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - ResNet
 - Roberta
 - Roformer
+- RT-DETR
+- RT-DETRv2
 - SAM
 - Segformer
 - SEW
