Add ONNX export support for Qwen3

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -92,6 +92,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - PoolFormer
 - PVT
 - Qwen2(Qwen1.5)
+- Qwen3
 - RegNet
 - RemBERT
 - ResNet
