--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -93,6 +93,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - PVT
 - Qwen2(Qwen1.5)
 - Qwen3
+- Qwen3-MoE
 - RegNet
 - RemBERT
 - ResNet
