Distribute and complete onnxruntime tests (decoder models) (#2278)
* added test_decoders.py

* fix position ids for single batch and more complete decoder testing for finegrained debugging

* support merging seq2seq models when used as decoders and add more tests

* fix pipe tests

* update phi min transformers version (broken by cache position refactorization)

* remove deprecated bloom modeling

* update opt onnx config to the one with position ids

* remove all complex deprecated modeling

* get_supported_model_type_for_task should only return suooprted model types

* update min transformers

* use transformers like api for use_cache and add can_use_cache and is_merged

* testing

* fix

* fix

* remove unnecessary

* simply qwen3

* docs

* qwen-moe

* model type shenanigans

* fix

* use test models from optimum-internal-hf with proper metadata

* Update optimum/onnxruntime/modeling_decoder.py

Co-authored-by: Ella Charlaix <80481427+echarlaix@users.noreply.github.com>

* keep supported model types

* optimum model

* fix failing test by forcing export

---------

Co-authored-by: Ella Charlaix <80481427+echarlaix@users.noreply.github.com>

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -93,6 +93,8 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - PoolFormer
 - PVT
 - Qwen2(Qwen1.5)
+- Qwen3
+- Qwen3-MoE
 - RegNet
 - RemBERT
 - ResNet
