--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -26,6 +26,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - BlenderBotSmall
 - Bloom
 - Camembert
+- ChineseCLIP
 - CLIP
 - CodeGen
 - ConvBert
